--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hello, <br> I'm Stephen </h2>
-                                <p data-animation="bounceInDown" data-delay="500ms"> A Software Developer </p>
+                                <p data-animation="bounceInDown" data-delay="500ms"> A Software Engineer </p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
                                     <a href="tel://0243588092" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
                                     <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
@@ -171,7 +171,7 @@
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm  Stephen </h2>
-                                <p data-animation="bounceInUp" data-delay="500ms"> A Software Developer </p>
+                                <p data-animation="bounceInUp" data-delay="500ms"> A Software Engineer </p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                     <a href="tel://0243588092" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
                                     <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
@@ -220,7 +220,7 @@
 							<div class="col-md-12 heading-section ftco-animate">
 								
 								<h2 class="mb-4 wow fadeInUp"  style="font-size: 34px; text-transform: capitalize;">About Me</h2>
-								<p class="wow fadeInUp" data-wow-delay="60ms"  style="color: rgba(140 , 140 , 140 , 1) ; "> I'm Stephen , a Software Developer from Ghana , West Africa </p>
+								<p class="wow fadeInUp" data-wow-delay="60ms"  style="color: rgba(140 , 140 , 140 , 1) ; "> I'm Stephen , a Software Engineer from Ghana , West Africa </p>
 
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex wow fadeInUp" ><span>Full Name :</span> <span> Stephen Korankye </span></li>
