--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	
 	<meta property="og:title" content="Stephen Korankye" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://korankye.herokuapp.com" />
-	<meta property="og:image" content="/img/stephenkorankye.jpg" />
+	<meta property="og:url" content="https://stephenkorankye.github.io/korankye/" />
+	<meta property="og:image" content="img/stephenkorankye.jpg" />
 	<meta property="og:image:width" content="256" />
 	<meta property="og:image:height" content="256" />
 	<meta property="og:site_name" content="Stephen Korankye" />
@@ -37,7 +37,7 @@
 	>
 	<meta name="twitter:image" content="/img/stephenkorankye.jpg">
 	<meta name="twitter:image:src" content="/img/stephenkorankye.jpg">
-	<meta name="twitter:url" content="https://korankye.herokuapp.com">
+	<meta name="twitter:url" content="https://stephenkorankye.github.io/korankye/">
 	
 	
 	
@@ -192,7 +192,7 @@
 			<div class="row" style="display:flex; justify-content:center ; align-items:center" >
 				<span style="margin-right: 5px;"> <i class="fa fa-file" style="font-size:30px;"></i> </span>
 				<span> <a style="color:white"
-					href="/resume/Resume Stephen.pdf" target="__blank"> View Resume</a> </span>
+					href="./resume/Stephen Korankye Resume.pdf" target="__blank"> View Resume</a> </span>
 			</div>
 		</div>
 	</section>
@@ -210,7 +210,7 @@
 				<div class="col-md-6 col-lg-5 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(/img/Stephen/stephenkorankye6.jpg); background-position:left center ; background-size:cover">
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(./img/Stephen/stephenkorankye6.jpg); background-position:left center ; background-size:cover">
 						</div>
 					</div>
 				</div>
@@ -224,7 +224,7 @@
 
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex wow fadeInUp" ><span>Full Name :</span> <span> Stephen Korankye </span></li>
-									<li class="d-flex wow fadeInUp" data-wow-delay="50ms" ><span> Coding Since : </span> <span> 2016 (6+ years) </span></li>
+									<li class="d-flex wow fadeInUp" data-wow-delay="50ms" ><span> Coding Since : </span> <span> 2016 (5+ years) </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="100ms" ><span> Postal Address : </span>  <span> P.O. Box AN 11384 , Accra - Ghana </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="150ms" ><span>Email : </span> <span> korankyes027@gmail.com </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="200ms" ><span>Phone : </span>   <span style="color:#b1b493 !important;"> 0 243 588 092 </span> </li>
@@ -387,7 +387,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
 					<span class="subheading" style="color:#fc6060"> General Servies </span>
 					<h2 class="mb-4" > Services I Offer </h2>
-					<p> Services offered over the last <%= new Date().getFullYear() - 2017 %>+ years of experience </p>
+					<p> Services offered over the last 5+ years of experience </p>
 				</div>
 			</div>
 
@@ -581,7 +581,7 @@
 								<span style="padding:10px"><img src="./img/logos/linkedin.png"/></span> 
 							</div>
 							<div class="text">
-								<p><span> Github:</span> <a href="https://github.com/stephenkorankye" target="__blank"> Stephen Korankye</a></p>
+								<p><span> LinkedIn:</span> <a href="https://www.linkedin.com/in/stephen-korankye-b6b3a91b4/" target="__blank"> Stephen Korankye</a></p>
 							</div>
 						</div>
 
