--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-D2YHTEZS5Z"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-D2YHTEZS5Z');
+	</script>
+
+
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,31 +32,25 @@
 	
 	<meta name="description" content="Official Website for Stephen Korankye"
 	/>
-	<meta name="keywords" content="stephen, korankye, portfolio, developer, website" />
+	<meta name="keywords" content="stephen korankye, stephen, korankye, stephenkorankye, portfolio, software" />
 	<meta name="author" content="Stephen Korankye" />
 	
 	<meta property="og:title" content="Stephen Korankye" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://stephenkorankye.github.io/korankye/" />
-	<meta property="og:image" content="img/stephenkorankye.jpg" />
+	<meta property="og:url" content="https://stephenkorankye.com" />
+	<meta property="og:image" content="https://stephenkorankye.com/img/stephenkorankye.jpg" />
 	<meta property="og:image:width" content="256" />
 	<meta property="og:image:height" content="256" />
 	<meta property="og:site_name" content="Stephen Korankye" />
-	<meta property="og:description" content="Official Website for Stephen Korankye" />
+	<meta property="og:description" content="Hello, I'm Stephen Korankye, A Software Engineer" />
 
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Stephen Korankye">
-	<meta name="twitter:description" content="Official Website for Stephen Korankye" 
+	<meta name="twitter:description" content="Hello, I'm Stephen Korankye, A Software Engineer" 
 	>
 	<meta name="twitter:image" content="/img/stephenkorankye.jpg">
 	<meta name="twitter:image:src" content="/img/stephenkorankye.jpg">
-	<meta name="twitter:url" content="https://stephenkorankye.github.io/korankye/">
-	
-	
-	
-	
-	
-	
+	<meta name="twitter:url" content="https://stephenkorankye.com/korankye/">
 	
 
     <!-- Title -->
@@ -56,6 +63,9 @@
 	
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/animate.css">
+
+
+
 
 </head>
 
@@ -192,7 +202,7 @@
 			<div class="row" style="display:flex; justify-content:center ; align-items:center" >
 				<span style="margin-right: 5px;"> <i class="fa fa-file" style="font-size:30px;"></i> </span>
 				<span> <a style="color:white"
-					href="./resume/Stephen Korankye Resume.pdf" target="__blank"> View Resume</a> </span>
+					href="./resume/Stephen_Korankye_Software_Engineer.pdf" target="__blank"> View Resume</a> </span>
 			</div>
 		</div>
 	</section>
@@ -224,10 +234,10 @@
 
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex wow fadeInUp" ><span>Full Name :</span> <span> Stephen Korankye </span></li>
-									<li class="d-flex wow fadeInUp" data-wow-delay="50ms" ><span> Coding Since : </span> <span> 2016 (5+ years) </span></li>
+									<li class="d-flex wow fadeInUp" data-wow-delay="50ms" ><span> Coding Since : </span> <span> 2016 (6+ years) </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="100ms" ><span> Postal Address : </span>  <span> P.O. Box AN 11384 , Accra - Ghana </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="150ms" ><span>Email : </span> <span> korankyes027@gmail.com </span></li>
-									<li class="d-flex wow fadeInUp" data-wow-delay="200ms" ><span>Phone : </span>   <span style="color:#b1b493 !important;"> 0 243 588 092 </span> </li>
+									<li class="d-flex wow fadeInUp" data-wow-delay="200ms" ><span>Phone : </span>   <span style="color:#b1b493 !important;"> <a href="tel://233243588092" style="color:#b1b493 !important;">  0 243 588 092 </a> </span> </li>
 								</ul>
 							</div>
 							
@@ -368,6 +378,12 @@
             <h3> SQLite </h3>
           </div>
         </div>
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="1150ms">
+			<div class="icon-box">
+			  <img src="img/logos/postgres_excessive.png" />
+			  <h3> PostgreSQL </h3>
+			</div>
+		</div>
       
       </div>
 
@@ -581,7 +597,7 @@
 								<span style="padding:10px"><img src="./img/logos/linkedin.png"/></span> 
 							</div>
 							<div class="text">
-								<p><span> LinkedIn:</span> <a href="https://www.linkedin.com/in/stephen-korankye-b6b3a91b4/" target="__blank"> Stephen Korankye</a></p>
+								<p><span> LinkedIn:</span> <a href="https://linkedin.com/in/stephen-korankye-b6b3a91b4/" target="__blank"> Stephen Korankye</a></p>
 							</div>
 						</div>
 
@@ -599,7 +615,7 @@
 								<span style="padding:2px"><img src="./img/logos/hackerrank.png"/></span> 
 							</div>
 							<div class="text">
-								<p><span> Hackerrank:</span> <a href="https://www.hackerrank.com/korankye" target="__blank"> Stephen Korankye</a></p>
+								<p><span> Hackerrank:</span> <a href="https://hackerrank.com/korankye" target="__blank"> Stephen Korankye</a></p>
 							</div>
 						</div>
 
@@ -663,7 +679,7 @@
 					<div class="ftco-footer-widget mb-4" >
 						<h2 class="ftco-heading-2 wow fadeInUp" > Amfex Network </h2>
 						<p class="wow fadeInUp" data-wow-delay="100ms"> <b> Amfex Network </b> has more surprises coming your way. Click the link to learn more. </p>
-						<p><a href="" target="__blank__" class="btn btn-primary" style="color:white ; background-color:#fc6060 ; border:1px solid #fc6060;">Learn more</a></p>
+						<p><a href="https://amfexnetwork.com" target="_blank" class="btn btn-primary" style="color:white ; background-color:#fc6060 ; border:1px solid #fc6060;">Learn more</a></p>
 					</div>
 				</div>
 				<div class="col-md">
@@ -702,9 +718,9 @@
 							</ul>
 						</div>
 						<ul class="ftco-footer-social list-unstyled mt-2">
-							<li class="ftco-animate wow fadeInUp" data-wow-delay="50ms" ><a target="__blank__" href="https://www.twitter.com/stevekorankye"><span class="fa fa-twitter"></span></a></li>
-							<li class="ftco-animate wow fadeInUp" data-wow-delay="80ms"><a target="__blank__" href="https://www.github.com/stephenkorankye"><span class="fa fa-github"></span></a></li>
-							<li class="ftco-animate wow fadeInUp" data-wow-delay="110ms"><a target="__blank__" href="https://www.instagram.com/stevekorankye"><span class="fa fa-instagram"></span></a></li>
+							<li class="ftco-animate wow fadeInUp" data-wow-delay="50ms" ><a target="__blank__" href="https://twitter.com/stevekorankye"><span class="fa fa-twitter"></span></a></li>
+							<li class="ftco-animate wow fadeInUp" data-wow-delay="80ms"><a target="__blank__" href="https://github.com/stephenkorankye"><span class="fa fa-github"></span></a></li>
+							<li class="ftco-animate wow fadeInUp" data-wow-delay="110ms"><a target="__blank__" href="https://instagram.com/stevekorankye"><span class="fa fa-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
