Reducing Project's Size

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <li><a href="#about-section"> About </a></li>
                                     <li><a href="#skills"> Skills </a></li>
                                     <li><a href="#services-section"> Services </a></li>
-                                    <li><a href="#projects-section"> Project </a></li>
+                                    <li><a href="#projects-section"> Projects </a></li>
                                     <li><a href="#contact-section"> External Links </a></li>
                                     
                                 </ul>
@@ -412,8 +412,8 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center"><span> <i class="fa fa-clipboard"> </i> </span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3"> Web Design </h3>
-							<p> Designing of new and/or existing websites of all kinds </p>
+							<h3 class="heading mb-3"> Web Development </h3>
+							<p> Develop new and/or re-develop existing websites of all kinds </p>
 						</div>
 					</div> 
 				</div>
@@ -421,8 +421,8 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span> <i class="fa fa-code"> </i> </span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3"> Web Development </h3>
-							<p> Development of all kinds of websites with the best Technologies </p>
+							<h3 class="heading mb-3"> Web Applications </h3>
+							<p> Development of all kinds of web apps with the best Technologies </p>
 						</div>
 					</div> 
 				</div>
@@ -449,8 +449,8 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span> <i class="fa fa-book"> </i> </span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3"> Programming Instructor </h3>
-							<p> I teach a great number of programming languages </p>
+							<h3 class="heading mb-3"> Programming Tutor </h3>
+							<p> I teach a good number of programming languages </p>
 						</div>
 					</div> 
 				</div>
@@ -459,8 +459,8 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span> <i class="fa fa-book"> </i> </span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3"> Database Administration </h3>
-							<p> Both relational and non-relational databases </p>
+							<h3 class="heading mb-3"> API Developments </h3>
+							<p> Developing APIs for your backend and server processes </p>
 						</div>
 					</div> 
 				</div>
@@ -470,6 +470,7 @@
 			
 		</div>
 	</section>
+	
 	
 	
 	
@@ -486,8 +487,8 @@
 			</div>
 			<div class="row">
 			
-				<div class="col-md-3 wow fadeInUp" >
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/BIOSSA.jpg); background-position:center center ; background-size:cover;">
+				<div class="col-md-2 wow fadeInUp" >
+					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/BIOSSA.jpg); background-position:center center ; background-size:cover; ">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3> <a href="https://biossauenr.com" target="__blank" style="color:white"> Biological Sciences Students Association - UENR </a></h3>
@@ -495,7 +496,25 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 wow fadeInUp" data-wow-delay="100ms">
+				<div class="col-md-2 wow fadeInUp" data-wow-delay="100ms">
+					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_amfex_2.png); background-size: 100%; background-position: center;">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3> <a href="https://amfextnetwork.com" target="__blank" style="color:white"> Amfex Network </a> </h3>
+							<span> <a href="https://amfexnetwork.com" target="__blank" style="color:orange"> Visit </a> </span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 wow fadeInUp" data-wow-delay="100ms">
+					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_empress.png); background-size: 100%; background-position: center;">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3> <a href="https://empressshipment.com" target="__blank" style="color:white"> Empress Shipment </a> </h3>
+							<span> <a href="https://empressshipment.com" target="__blank" style="color:orange"> Visit </a> </span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-2 wow fadeInUp" data-wow-delay="100ms">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo.jpg); background-position:center center ; background-size:cover;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
@@ -504,8 +523,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 wow fadeInUp" data-wow-delay="200ms">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_archivez.png); background-position:center center ; background-size:cover;">
+				<div class="col-md-2 wow fadeInUp" data-wow-delay="200ms">
+					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_archivez.png); background-size: 100%; background-position: center;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3> <a href="https://grouparchz.herokuapp.com" target="__blank" style="color:white"> Document Storage  (Archivez) </a> </h3>
@@ -514,8 +533,8 @@
 					</div>
 				</div>
 
-				<div class="col-md-3 wow fadeInUp" data-wow-delay="200ms">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_scouting.png); background-position:center center ; background-size:cover;">
+				<div class="col-md-2 wow fadeInUp" data-wow-delay="200ms">
+					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_scouting.png); background-size: 100%; background-position: center;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3> <a href="https://thescouter.herokuapp.com" target="__blank" style="color:white"> Scouting System </a> </h3>
@@ -531,8 +550,8 @@
 
 			<div class="row">
 			
-				<div class="col-md-3 wow fadeInUp" >
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_reporting.png); background-position:center center ; background-size:cover;">
+				<div class="col-md-2 wow fadeInUp" >
+					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_reporting.png); background-size: 100%; background-position: center;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3> <a href="https://groupkwaapiah.herokuapp.com/users/login" target="__blank" style="color:white"> Crime Reporting System </a></h3>
@@ -540,16 +559,18 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 wow fadeInUp" data-wow-delay="100ms">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_amfex.jpg); background-position:center center ; background-size:cover;">
+
+				<div class="col-md-2 wow fadeInUp" >
+					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_safepolls.png); background-size: 100%; background-position: center;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3> <a href="https://amfextnetwork.com" target="__blank" style="color:white"> Amfex Network </a> </h3>
-							<span> <a href="https://amfexnetwork.com" target="__blank" style="color:orange"> Visit </a> </span>
+							<h3> <a href="javascript:void(0);" target="__blank" style="color:white"> Safe Polls </a></h3>
+							<span> <a href="javascript:void(0);" target="__blank" style="color:orange"> Incomplete </a> </span>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 wow fadeInUp" data-wow-delay="200ms">
+				
+				<div class="col-md-2 wow fadeInUp" data-wow-delay="200ms">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/fliers.webp); background-position:center center ; background-size:cover;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
@@ -558,7 +579,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 wow fadeInUp" data-wow-delay="300ms">
+				<div class="col-md-2 wow fadeInUp" data-wow-delay="300ms">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/sammy_softwares.png); background-position:center center ; background-size:cover;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
@@ -651,7 +672,7 @@
 								<span style="padding:6px"><img src="./img/logos/instagram.png"/></span> 
 							</div>
 							<div class="text">
-								<p><span> Instagram:</span> <a href="instagram.com/stevekorankye" target="__blank"> Stephen Korankye</a></p>
+								<p><span> Instagram:</span> <a href="https://instagram.com/stevekorankye" target="__blank"> Stephen Korankye</a></p>
 							</div>
 						</div>
 
