Reducing Loading Time

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span> <i class="fa fa-book"> </i> </span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3"> API Developments </h3>
+							<h3 class="heading mb-3"> API Development </h3>
 							<p> Developing APIs for your backend and server processes </p>
 						</div>
 					</div> 
