Reduced Number of Projects

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 
 
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-D2YHTEZS5Z"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R1MKKTR1P8"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 
-		gtag('config', 'G-D2YHTEZS5Z');
+		gtag('config', 'G-R1MKKTR1P8');
 	</script>
 
 
@@ -571,7 +571,7 @@
 					</div>
 				</div>
 
-				
+
 				<div class="col-md-2 wow fadeInUp" data-wow-delay="200ms">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/fliers.webp); background-position:center center ; background-size:cover;">
 						<div class="overlay"></div>
