Changes From Kwaapiah

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	
 	
 	
-	<section class=""  style="background-color: #d76060; padding: 15px 10px; font-size: 20px;" >
+	<section class=""  style="background-color: #c25e5e; padding: 15px 10px; font-size: 20px;" >
 		<div class="container">
 			<div class="row" style="display:flex; justify-content:center ; align-items:center" >
 				<span style="margin-right: 5px;"> <i class="fa fa-file" style="font-size:20px;"></i> </span>
@@ -250,7 +250,7 @@
 	
 	
 	
-	<section class="ftco-section" style="padding: 70px 0 50px 0 ; background-color: #ff9696 ; " id="skills" >
+	<section class="ftco-section" style="padding: 70px 0 50px 0 ; background-color: #d36c6c ; " id="skills" >
 		
 		<div class="mySkills container">
 
@@ -401,7 +401,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-					<span class="subheading" style="color:#fc6060"> General Servies </span>
+					<span class="subheading" style="color:#ba5454"> General Servies </span>
 					<h2 class="mb-4" > Services I Offer </h2>
 					<p> Services offered over the last 5+ years of experience </p>
 				</div>
