Changes From Kwaapiah 2.0

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	
 	
 	
-	<section class=""  style="background-color: #c25e5e; padding: 15px 10px; font-size: 20px;" >
+	<section class=""  style="background-color: #db5a5a; padding: 15px 10px; font-size: 20px;" >
 		<div class="container">
 			<div class="row" style="display:flex; justify-content:center ; align-items:center" >
 				<span style="margin-right: 5px;"> <i class="fa fa-file" style="font-size:20px;"></i> </span>
@@ -250,7 +250,7 @@
 	
 	
 	
-	<section class="ftco-section" style="padding: 70px 0 50px 0 ; background-color: #d36c6c ; " id="skills" >
+	<section class="ftco-section" style="padding: 70px 0 50px 0 ; background-color: #fc6060 ; " id="skills" >
 		
 		<div class="mySkills container">
 
