Changes From Kwaapiah 2.0

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 </head>
 
-<body>
+<body style="width: 100%; overflow-x: hidden;">
    
     <div id="preloader">
         <div class="loader"></div>
@@ -250,7 +250,7 @@
 	
 	
 	
-	<section class="ftco-section" style="padding: 70px 0 50px 0 ; background-color: #fc6060 ; " id="skills" >
+	<section class="ftco-section" style="padding: 70px 0 50px 0 ; background-color: #e56c6e ; " id="skills" >
 		
 		<div class="mySkills container">
 
@@ -401,7 +401,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-					<span class="subheading" style="color:#ba5454"> General Servies </span>
+					<span class="subheading" style="color:#e56c6e"> General Servies </span>
 					<h2 class="mb-4" > Services I Offer </h2>
 					<p> Services offered over the last 5+ years of experience </p>
 				</div>
@@ -702,7 +702,7 @@
 					<div class="ftco-footer-widget mb-4" >
 						<h2 class="ftco-heading-2 wow fadeInUp" > Amfex Network </h2>
 						<p class="wow fadeInUp" data-wow-delay="100ms"> <b> Amfex Network </b> has more surprises coming your way. Click the link to learn more. </p>
-						<p><a href="https://amfexnetwork.com" target="_blank" class="btn btn-primary" style="color:white ; background-color:#fc6060 ; border:1px solid #fc6060;">Learn more</a></p>
+						<p><a href="https://amfexnetwork.com" target="_blank" class="btn btn-primary" style="color:white ; background-color:#e56c6e ; border:1px solid #fc6060;">Learn more</a></p>
 					</div>
 				</div>
 				<div class="col-md">
