Changes From Kwaapiah 2.1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, ">
 	
 	<link rel="stylesheet" href="/css/font-awesome-4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" href="/css/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -27,7 +27,6 @@
 	
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin&family=Open+Sans:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
-	
 	
 	
 	<meta name="description" content="Official Website for Stephen Korankye"
@@ -69,7 +68,7 @@
 
 </head>
 
-<body style="width: 100%; overflow-x: hidden;">
+<body style="width: 100%; overflow-x: hidden; padding: 0; margin: 0;">
    
     <div id="preloader">
         <div class="loader"></div>
@@ -132,7 +131,7 @@
 	
 	
 	
-    <section class="welcome-area">
+    <section class="welcome-area" >
         <div class="welcome-slides owl-carousel">
             <!-- Single Slide -->
             <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(./img/Stephen/stephenkorankye4.jpg);">
@@ -236,7 +235,7 @@
 									<li class="d-flex wow fadeInUp" ><span>Full Name :</span> <span> Stephen Korankye </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="50ms" ><span> Coding Since : </span> <span> 2016 (6+ years) </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="100ms" ><span> Postal Address : </span>  <span> P.O. Box AN 11384 , Accra - Ghana </span></li>
-									<li class="d-flex wow fadeInUp" data-wow-delay="150ms" ><span>Email : </span> <span> korankyes027@gmail.com </span></li>
+									<li class="d-flex wow fadeInUp" data-wow-delay="150ms" ><span>Email : </span> <span> korankyes027 @gmail.com </span></li>
 									<li class="d-flex wow fadeInUp" data-wow-delay="200ms" ><span>Phone : </span>   <span style="color:#b1b493 !important;"> <a href="tel://233243588092" style="color:#b1b493 !important;">  0 243 588 092 </a> </span> </li>
 								</ul>
 							</div>
