--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo.jpg); background-position:center center ; background-size:cover;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3> <a href="https://abryt.herokuapp.com" target="__blank" style="color:white"> Abryt Unique Ventures </a> </h3>
-							<span> <a href="https://abryt.herokuapp.com" target="__blank" style="color:orange"> Visit </a> </span>
+							<h3> <a href="https://abryt.vercel.app/" target="__blank" style="color:white"> Abryt Unique Ventures </a> </h3>
+							<span> <a href="https://abryt.vercel.app/" target="__blank" style="color:orange"> Visit </a> </span>
 						</div>
 					</div>
 				</div>
@@ -527,8 +527,8 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_archivez.png); background-size: 100%; background-position: center;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3> <a href="https://grouparchz.herokuapp.com" target="__blank" style="color:white"> Document Storage  (Archivez) </a> </h3>
-							<span> <a href="https://grouparchz.herokuapp.com" target="__blank" style="color:orange"> Visit </a> </span>
+							<h3> <a href="https://groupscouting-yu3te.ondigitalocean.app/" target="__blank" style="color:white"> Document Storage  (Archivez) </a> </h3>
+							<span> <a href="https://groupscouting-yu3te.ondigitalocean.app/" target="__blank" style="color:orange"> Visit </a> </span>
 						</div>
 					</div>
 				</div>
@@ -537,8 +537,8 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_scouting.png); background-size: 100%; background-position: center;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3> <a href="https://thescouter.herokuapp.com" target="__blank" style="color:white"> Scouting System </a> </h3>
-							<span> <a href="https://thescouter.herokuapp.com" target="__blank" style="color:orange"> Visit </a> </span>
+							<h3> <a href="https://groupscouting-1-ipigj.ondigitalocean.app/" target="__blank" style="color:white"> Scouting System </a> </h3>
+							<span> <a href="https://groupscouting-1-ipigj.ondigitalocean.app/" target="__blank" style="color:orange"> Visit </a> </span>
 						</div>
 					</div>
 				</div>
@@ -554,8 +554,8 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/logo_reporting.png); background-size: 100%; background-position: center;">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3> <a href="https://groupkwaapiah.herokuapp.com/users/login" target="__blank" style="color:white"> Crime Reporting System </a></h3>
-							<span> <a href="https://groupkwaapiah.herokuapp.com/users/login" target="__blank" style="color:orange"> Visit </a> </span>
+							<h3> <a href="https://crimereporting-cgwhh.ondigitalocean.app/users/login" target="__blank" style="color:white"> Crime Reporting System </a></h3>
+							<span> <a href="https://crimereporting-cgwhh.ondigitalocean.app/users/login" target="__blank" style="color:orange"> Visit </a> </span>
 						</div>
 					</div>
 				</div>
