About words minor edit

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 							<div class="col-md-12 heading-section ftco-animate">
 								
 								<h2 class="mb-4 wow fadeInUp"  style="font-size: 34px; text-transform: capitalize;">About Me</h2>
-								<p class="wow fadeInUp" data-wow-delay="60ms"  style="color: rgba(140 , 140 , 140 , 1) ; "> I'm Stephen, I'm passionate about programming and technology. <br>
+								<p class="wow fadeInUp" data-wow-delay="60ms"  style="color: rgba(140 , 140 , 140 , 1) ; "> I'm Stephen, a Software Engineer passionate about programming and technology. <br>
 									I build Websites, Web Applications, Mobile Applications , Desktop Applications and also teach others programming. <br>
 									
 								</p>
@@ -250,7 +250,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-
 	
 	
 	
