--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hello, <br> I'm Stephen </h2>
                                 <p data-animation="bounceInDown" data-delay="500ms"> A Software Engineer </p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a href="tel://0243588092" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
+                                    <a href="mailto:korankyes027@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
                                     <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
                                 </div>
                             </div>
@@ -162,7 +162,7 @@
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm  Stephen </h2>
                                 <p data-animation="bounceInUp" data-delay="500ms"> I Design and Develop </p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="tel://0243588092" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
+                                    <a href="mailto:korankyes027@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
                                     <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm  Stephen </h2>
                                 <p data-animation="bounceInUp" data-delay="500ms"> A Software Engineer </p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="tel://0243588092" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
+                                    <a href="mailto:korankyes027@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
                                     <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
                                 </div>
                             </div>
@@ -729,10 +729,10 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2 wow fadeInUp" >Services</h2>
 						<ul class="list-unstyled">
-							<li class="wow fadeInUp" data-wow-delay="50ms"><a href="tel://233243588092"><span class="fa fa-chevron-right mr-2 "></span> Web Design </a></li>
-							<li class="wow fadeInUp" data-wow-delay="100ms"><a href="tel://233243588092"><span class="fa fa-chevron-right mr-2"></span> Web Development </a></li>
-							<li class="wow fadeInUp" data-wow-delay="150ms"><a href="tel://233243588092"><span class="fa fa-chevron-right mr-2"></span> Desktop Applications </a></li>
-							<li class="wow fadeInUp" data-wow-delay="200ms"><a href="tel://233243588092"><span class="fa fa-chevron-right mr-2"></span> Programming Tutoring </a></li>
+							<li class="wow fadeInUp" data-wow-delay="50ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2 "></span> Web Design </a></li>
+							<li class="wow fadeInUp" data-wow-delay="100ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2"></span> Web Development </a></li>
+							<li class="wow fadeInUp" data-wow-delay="150ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2"></span> Desktop Applications </a></li>
+							<li class="wow fadeInUp" data-wow-delay="200ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2"></span> Programming Tutoring </a></li>
 							
 						</ul>
 					</div>
@@ -743,7 +743,6 @@
 						<div class="block-23 mb-3">
 							<ul>
 								<li class="wow fadeInUp" data-wow-delay="50ms"><span class="icon fa fa-map marker"></span><span class="text"> P.O. Box AN 11384, Accra-North </span></li>
-								<li class="wow fadeInUp" data-wow-delay="100ms"><a href="tel://233243588092"><span class="icon fa fa-phone"></span><span class="text"> +233 243 588 092 </span></a></li>
 								<li class="wow fadeInUp" data-wow-delay="150ms"><a href="mailto:korankyes027@gmail.com"><span class="icon fa fa-paper-plane pr-4"></span><span class="text"> korankyes027@gmail.com </span></a></li>
 							</ul>
 						</div>
