--- a/index.html
+++ b/index.html
@@ -284,6 +284,12 @@
             <h3> JavaScript </h3>
           </div>
         </div>
+		<div class="col-lg-3 col-md-4 mt-4 mt-md-0 wow fadeInUp" data-wow-delay="50ms">
+			<div class="icon-box">
+			  <img src="img/logos/ts_excessive.png" />
+			  <h3> TypeScript </h3>
+			</div>
+		  </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0 wow fadeInUp" data-wow-delay="100ms">
           <div class="icon-box">
 			<img src="img/logos/nodejs_excessive.png" />
@@ -499,8 +505,8 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/BIOSSA.jpg); background-position:center center ; background-size:cover; ">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3> <a href="https://biossauenr.com" target="__blank" style="color:white"> Biological Sciences Students Association - UENR </a></h3>
-							<span> <a href="https://biossauenr.com" target="__blank" style="color:orange"> Visit </a> </span>
+							<h3> <a href="https://biologicals.vercel.app/" target="__blank" style="color:white"> Biological Sciences Students Association - UENR </a></h3>
+							<span> <a href="https://biologicals.vercel.app/" target="__blank" style="color:orange"> Visit </a> </span>
 						</div>
 					</div>
 				</div>
