--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </div>
 
       <div class="row" >
-        <div class="col-lg-3 col-md-4 wow fadeInUp" >
+        <div class="col-lg-3 col-md-4  wow fadeInUp" >
           <div class="icon-box" >
 			<img src="img/logos/html_excessive.png" />
             <h3> HTML </h3>
@@ -284,13 +284,15 @@
             <h3> JavaScript </h3>
           </div>
         </div>
+
 		<div class="col-lg-3 col-md-4 mt-4 mt-md-0 wow fadeInUp" data-wow-delay="50ms">
-			<div class="icon-box">
-			  <img src="img/logos/ts_excessive.png" />
-			  <h3> TypeScript </h3>
-			</div>
-		  </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0 wow fadeInUp" data-wow-delay="100ms">
+          <div class="icon-box">
+			<img src="img/logos/ts_excessive.png" />
+            <h3> JavaScript </h3>
+          </div>
+        </div>
+		
+        <div class="col-lg-3 col-md-4 mt-4  wow fadeInUp" data-wow-delay="100ms">
           <div class="icon-box">
 			<img src="img/logos/nodejs_excessive.png" />
             <h3> Nodejs  </h3>
