--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 		<div class="col-lg-3 col-md-4 mt-4 mt-md-0 wow fadeInUp" data-wow-delay="50ms">
           <div class="icon-box">
 			<img src="img/logos/ts_excessive.png" />
-            <h3> JavaScript </h3>
+            <h3> TypeScript </h3>
           </div>
         </div>
 		
