--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <h3>  ElectronJS  </h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="300ms">
+        <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="250ms">
           <div class="icon-box">
             <img src="img/logos/nextjs_excessive.png" />
             <h3> NextJS </h3>
@@ -329,7 +329,7 @@
           </div>
         </div> -->
         
-        <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="350ms">
+        <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="260ms">
           <div class="icon-box">
            <img src="img/logos/jquery_excessive.png" />
             <h3>  JQuery  </h3>
@@ -343,20 +343,20 @@
         </div> -->
         
 		
-		  <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="400ms">
+		  <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="260ms">
 			<div class="icon-box">
 			  <img src="img/logos/cpp_excessive.png" />
 			  <h3> C/C++ </h3>
 			</div>
 		  </div>
-        <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="450ms">
+        <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="270ms">
           <div class="icon-box">
 			<img src="img/logos/python_excessive.png" />
             <h3> Python </h3>
           </div>
         </div>
 
-		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="500ms">
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="300ms">
 			<div class="icon-box">
 			  <img src="img/logos/fastapi.svg" />
 			  <h3> FastAPI </h3>
@@ -369,33 +369,39 @@
             <h3> QT/QML </h3>
           </div>
         </div> -->
-		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="550ms">
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="310ms">
           <div class="icon-box">
 			<img src="img/logos/java_excessive.png" />
             <h3> Java</h3>
           </div>
         </div>
-		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="600ms">
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="320ms">
+          <div class="icon-box">
+			<img src="img/logos/redis_excessive.png" />
+            <h3>Redis </h3>
+          </div>
+        </div>
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="330ms">
           <div class="icon-box">
 			<img src="img/logos/mysql_excessive.png" />
             <h3> MySQL </h3>
           </div>
         </div>
-		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="650ms">
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="400ms">
           <div class="icon-box">
 			<img src="img/logos/mongodb_excessive.png" />
             <h3> MongoDB </h3>
           </div>
         </div>
-		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="700ms">
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="420ms">
           <div class="icon-box">
 			<img src="img/logos/sqlite_excessive.png" />
             <h3> SQLite </h3>
           </div>
         </div>
-		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="750ms">
-			<div class="icon-box">
-			  <img src="img/logos/postgres_excessive.png" />
+		<div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="460ms">
+			<div class="icon-box p-3">
+			  <img src="img/logos/postgres_excessive.png"  />
 			  <h3> PostgreSQL </h3>
 			</div>
 		</div>
