--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <li><a href="#about-section"> About </a></li>
                                     <li><a href="#skills"> Skills </a></li>
                                     <li><a href="#services-section"> Services </a></li>
-                                    <li><a href="#projects-section"> Projects </a></li>
+                                    <!-- <li><a href="#projects-section"> Projects </a></li> -->
                                     <li><a href="#contact-section"> External Links </a></li>
                                     
                                 </ul>
@@ -498,7 +498,7 @@
 	
 	
 	
-	<section class="ftco-section ftco-project" style="padding: 70px 0 50px 0 ; background-color:rgb(255,240,240);" id="projects-section">
+	<!-- <section class="ftco-section ftco-project" style="padding: 70px 0 50px 0 ; background-color:rgb(255,240,240);" id="projects-section">
 		<div class="container-fluid px-md-4">
 			<div class="row justify-content-center pb-5 wow fadeInUp" >
 				<div class="col-md-12 heading-section text-center ftco-animate">
@@ -615,11 +615,11 @@
 				
 			</div>
 		</div>
-	</section>
+	</section> -->
 	
 	
 	
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+	<section class="ftco-section contact-section ftco-no-pb" style="padding: 70px 0 50px 0 ; background-color:rgb(255,240,240);"  id="contact-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-3 wow fadeInUp" >
 				<div class="col-md-7 heading-section text-center ftco-animate">
