fix: fixing typos & cv

--- a/index.html
+++ b/index.html
@@ -124,12 +124,7 @@
             </div>
         </div>
     </header>
-	
-	
-	
-	
-	
-	
+
 	
     <section class="welcome-area" >
         <div class="welcome-slides owl-carousel">
@@ -346,7 +341,7 @@
 		  <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="260ms">
 			<div class="icon-box">
 			  <img src="img/logos/cpp_excessive.png" />
-			  <h3> C/C++ </h3>
+			  <h3> C++ </h3>
 			</div>
 		  </div>
         <div class="col-lg-3 col-md-4 mt-4 wow fadeInUp" data-wow-delay="270ms">
@@ -423,7 +418,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
 					<span class="subheading" style="color:#e56c6e"> General Servies </span>
-					<h2 class="mb-4" > Services I Offer </h2>
+					<h2 class="mb-4" > Services Offered </h2>
 					<p> Services offered over the last 5+ years of experience </p>
 				</div>
 			</div>
@@ -432,6 +427,7 @@
 				<div class="col-md-6 col-lg-3 wow fadeInUp" >
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon d-flex align-items-center justify-content-center"><span> <i class="fa fa-clipboard"> </i> </span></div>
+						
 						<div class="media-body">
 							<h3 class="heading mb-3"> Web Development </h3>
 							<p> Develop new and/or re-develop existing websites of all kinds </p>
@@ -756,7 +752,6 @@
 						<h2 class="ftco-heading-2 wow fadeInUp"> Let's Talk More </h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li class="wow fadeInUp" data-wow-delay="50ms"><span class="icon fa fa-map marker"></span><span class="text"> P.O. Box AN 11384, Accra-North </span></li>
 								<li class="wow fadeInUp" data-wow-delay="150ms"><a href="mailto:korankyes027@gmail.com"><span class="icon fa fa-paper-plane pr-4"></span><span class="text"> korankyes027@gmail.com </span></a></li>
 							</ul>
 						</div>
