fix: fix broken project urls

--- a/projects.html
+++ b/projects.html
@@ -450,7 +450,7 @@
 				<div class="col-md-12">
 					<div style="display: flex; align-items: center;">
 						<span class="m-1"> <h2> Document Storage System (Archivez) </h2> </span>
-						<span class="m-1" style="font-size: 20px;" > <a href="https://grouparchivez-c8lx6.ondigitalocean.app/"> View Website <sup><i class="fa fa-link"></i></sup> </a></span>
+						<span class="m-1" style="font-size: 20px;" > <a href="https://grouparchive-9xnqs.ondigitalocean.app/"> View Website <sup><i class="fa fa-link"></i></sup> </a></span>
 					</div>
 					<div class="">
 						This website stores and manages files of different formats (.pdf, .docx, .ppt, etc)  
@@ -515,7 +515,7 @@
 				<div class="col-md-12">
 					<div style="display: flex; align-items: center;">
 						<span class="m-1"> <h2> Scouting System </h2> </span>
-						<span class="m-1" style="font-size: 20px;" > <a href="https://groupscouting-52qgz.ondigitalocean.app/"> View Website <sup><i class="fa fa-link"></i></sup> </a></span>
+						<span class="m-1" style="font-size: 20px;" > <a href="https://groupscouting-ap7y9.ondigitalocean.app/"> View Website <sup><i class="fa fa-link"></i></sup> </a></span>
 					</div>
 					<div class="">
 						This system lets scouts find players and communicate with players 
@@ -583,7 +583,7 @@
 				<div class="col-md-12">
 					<div style="display: flex; align-items: center;">
 						<span class="m-1"> <h2> Anonymous Crime Reporting System </h2> </span>
-						<span class="m-1" style="font-size: 20px;" > <a href="https://crimereporting-tiwl9.ondigitalocean.app/users/login"> View Website <sup><i class="fa fa-link"></i></sup> </a></span>
+						<span class="m-1" style="font-size: 20px;" > <a href="https://crimereporting-jyr2g.ondigitalocean.app/users/login"> View Website <sup><i class="fa fa-link"></i></sup> </a></span>
 					</div>
 					<div class="">
 						This system lets you report crime to without your identity being shown 
