--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 							style="display: flex; align-items: flex-end; background-color: rgba(233,233,233,1); padding:1px 5px; border-radius: 3px;"
 							>
 							<span style="margin: 4px"> <img src="./img/logos/gmail.webp" style="width: 20px;"/> </span>
-							<span style="margin: 2px 4px;"> Send Email </span> 
+							<span style="margin: 2px 4px;"> Email </span> 
 						</a>
 					</div>
 
